--- a/dev/_modules/smac/scenario/scenario.html
+++ b/dev/_modules/smac/scenario/scenario.html
@@ -680,8 +680,8 @@
 
         <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">shared_model</span> <span class="ow">and</span> <span class="bp">self</span><span class="o">.</span><span class="n">input_psmac_dirs</span> <span class="ow">is</span> <span class="kc">None</span><span class="p">:</span>
             <span class="c1"># per default, we assume that</span>
-            <span class="c1"># all psmac runs write to the same directory</span>
-            <span class="bp">self</span><span class="o">.</span><span class="n">input_psmac_dirs</span> <span class="o">=</span> <span class="p">[</span><span class="bp">self</span><span class="o">.</span><span class="n">output_dir</span><span class="p">]</span>
+            <span class="c1"># all pSMAC runs write to the default output dir</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">input_psmac_dirs</span> <span class="o">=</span> <span class="s2">&quot;smac3-output*/run*/&quot;</span>
 
     <span class="k">def</span> <span class="nf">__getstate__</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="n">d</span> <span class="o">=</span> <span class="nb">dict</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="vm">__dict__</span><span class="p">)</span>
