--- a/dev/genindex.html
+++ b/dev/genindex.html
@@ -784,9 +784,9 @@
 </li>
       <li><a href="apidoc/smac.utils.io.traj_logging.html#smac.utils.io.traj_logging.TrajLogger.read_traj_aclib_format">read_traj_aclib_format() (smac.utils.io.traj_logging.TrajLogger static method)</a>
 </li>
-      <li><a href="apidoc/smac.smac_cli.html#smac.smac_cli.SMACCLI.restore_state_after_scen">restore_state_after_scen() (smac.smac_cli.SMACCLI method)</a>
+      <li><a href="apidoc/smac.smac_cli.html#smac.smac_cli.SMACCLI.restore_state">restore_state() (smac.smac_cli.SMACCLI method)</a>
 </li>
-      <li><a href="apidoc/smac.smac_cli.html#smac.smac_cli.SMACCLI.restore_state_before_scen">restore_state_before_scen() (smac.smac_cli.SMACCLI method)</a>
+      <li><a href="apidoc/smac.smac_cli.html#smac.smac_cli.SMACCLI.restore_state_after_output_dir">restore_state_after_output_dir() (smac.smac_cli.SMACCLI method)</a>
 </li>
       <li><a href="apidoc/smac.epm.rf_with_instances.html#smac.epm.rf_with_instances.RandomForestWithInstances.rf">rf (smac.epm.rf_with_instances.RandomForestWithInstances attribute)</a>
 </li>
