--- a/dev/_modules/smac/smac_cli.html
+++ b/dev/_modules/smac/smac_cli.html
@@ -313,21 +313,19 @@
         <span class="n">stats</span> <span class="o">=</span> <span class="kc">None</span>
         <span class="n">incumbent</span> <span class="o">=</span> <span class="kc">None</span>
 
-        <span class="c1"># Restore state (needs to be before scenario-creation!)</span>
-        <span class="k">if</span> <span class="n">args_</span><span class="o">.</span><span class="n">restore_state</span><span class="p">:</span>
-            <span class="n">root_logger</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="s2">&quot;Restoring state from </span><span class="si">%s</span><span class="s2">...&quot;</span><span class="p">,</span> <span class="n">args_</span><span class="o">.</span><span class="n">restore_state</span><span class="p">)</span>
-            <span class="n">rh</span><span class="p">,</span> <span class="n">stats</span><span class="p">,</span> <span class="n">traj_list_aclib</span><span class="p">,</span> <span class="n">traj_list_old</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">restore_state_before_scen</span><span class="p">(</span><span class="n">args_</span><span class="p">)</span>
-
         <span class="c1"># Create scenario-object</span>
         <span class="n">scen</span> <span class="o">=</span> <span class="n">Scenario</span><span class="p">(</span><span class="n">args_</span><span class="o">.</span><span class="n">scenario_file</span><span class="p">,</span> <span class="n">misc_args</span><span class="p">)</span>
 
-        <span class="c1"># Restore state (continued, needs to be after scenario-creation!)</span>
+        <span class="c1"># Restore state</span>
         <span class="k">if</span> <span class="n">args_</span><span class="o">.</span><span class="n">restore_state</span><span class="p">:</span>
+            <span class="n">root_logger</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="s2">&quot;Restoring state from </span><span class="si">%s</span><span class="s2">...&quot;</span><span class="p">,</span> <span class="n">args_</span><span class="o">.</span><span class="n">restore_state</span><span class="p">)</span>
+            <span class="n">rh</span><span class="p">,</span> <span class="n">stats</span><span class="p">,</span> <span class="n">traj_list_aclib</span><span class="p">,</span> <span class="n">traj_list_old</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">restore_state</span><span class="p">(</span><span class="n">scen</span><span class="p">,</span> <span class="n">args_</span><span class="p">)</span>
+
             <span class="n">scen</span><span class="o">.</span><span class="n">output_dir_for_this_run</span> <span class="o">=</span> <span class="n">create_output_directory</span><span class="p">(</span>
                 <span class="n">scen</span><span class="p">,</span> <span class="n">args_</span><span class="o">.</span><span class="n">seed</span><span class="p">,</span> <span class="n">root_logger</span><span class="p">,</span>
             <span class="p">)</span>
             <span class="n">scen</span><span class="o">.</span><span class="n">write</span><span class="p">()</span>
-            <span class="n">stats</span><span class="p">,</span> <span class="n">incumbent</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">restore_state_after_scen</span><span class="p">(</span><span class="n">scen</span><span class="p">,</span> <span class="n">stats</span><span class="p">,</span>
+            <span class="n">incumbent</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">restore_state_after_output_dir</span><span class="p">(</span><span class="n">scen</span><span class="p">,</span> <span class="n">stats</span><span class="p">,</span>
                                            <span class="n">traj_list_aclib</span><span class="p">,</span> <span class="n">traj_list_old</span><span class="p">)</span>
 
         <span class="k">if</span> <span class="n">args_</span><span class="o">.</span><span class="n">warmstart_runhistory</span><span class="p">:</span>
@@ -378,12 +376,9 @@
         <span class="k">except</span> <span class="p">(</span><span class="n">TAEAbortException</span><span class="p">,</span> <span class="n">FirstRunCrashedException</span><span class="p">)</span> <span class="k">as</span> <span class="n">err</span><span class="p">:</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">logger</span><span class="o">.</span><span class="n">error</span><span class="p">(</span><span class="n">err</span><span class="p">)</span></div>
 
-<div class="viewcode-block" id="SMACCLI.restore_state_before_scen"><a class="viewcode-back" href="../../apidoc/smac.smac_cli.html#smac.smac_cli.SMACCLI.restore_state_before_scen">[docs]</a>    <span class="k">def</span> <span class="nf">restore_state_before_scen</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">args_</span><span class="p">):</span>
+<div class="viewcode-block" id="SMACCLI.restore_state"><a class="viewcode-back" href="../../apidoc/smac.smac_cli.html#smac.smac_cli.SMACCLI.restore_state">[docs]</a>    <span class="k">def</span> <span class="nf">restore_state</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">scen</span><span class="p">,</span> <span class="n">args_</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Read in files for state-restoration: runhistory, stats, trajectory.</span>
 <span class="sd">        &quot;&quot;&quot;</span>
-        <span class="c1"># Construct dummy-scenario for object-creation (mainly cs is needed)</span>
-        <span class="n">tmp_scen</span> <span class="o">=</span> <span class="n">InputReader</span><span class="p">()</span><span class="o">.</span><span class="n">read_scenario_file</span><span class="p">(</span><span class="n">args_</span><span class="o">.</span><span class="n">scenario_file</span><span class="p">)</span>
-        <span class="n">tmp_scen</span> <span class="o">=</span> <span class="n">Scenario</span><span class="p">(</span><span class="n">tmp_scen</span><span class="p">,</span> <span class="n">cmd_args</span><span class="o">=</span><span class="p">{</span><span class="s1">&#39;output_dir&#39;</span><span class="p">:</span><span class="s1">&#39;&#39;</span><span class="p">})</span>
         <span class="c1"># Check for folder and files</span>
         <span class="n">rh_path</span> <span class="o">=</span> <span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">args_</span><span class="o">.</span><span class="n">restore_state</span><span class="p">,</span> <span class="s2">&quot;runhistory.json&quot;</span><span class="p">)</span>
         <span class="n">stats_path</span> <span class="o">=</span> <span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">args_</span><span class="o">.</span><span class="n">restore_state</span><span class="p">,</span> <span class="s2">&quot;stats.json&quot;</span><span class="p">)</span>
@@ -394,9 +389,9 @@
            <span class="k">raise</span> <span class="ne">FileNotFoundError</span><span class="p">(</span><span class="s2">&quot;Could not find folder from which to restore.&quot;</span><span class="p">)</span>
         <span class="c1"># Load runhistory and stats</span>
         <span class="n">rh</span> <span class="o">=</span> <span class="n">RunHistory</span><span class="p">(</span><span class="n">aggregate_func</span><span class="o">=</span><span class="kc">None</span><span class="p">)</span>
-        <span class="n">rh</span><span class="o">.</span><span class="n">load_json</span><span class="p">(</span><span class="n">rh_path</span><span class="p">,</span> <span class="n">tmp_scen</span><span class="o">.</span><span class="n">cs</span><span class="p">)</span>
+        <span class="n">rh</span><span class="o">.</span><span class="n">load_json</span><span class="p">(</span><span class="n">rh_path</span><span class="p">,</span> <span class="n">scen</span><span class="o">.</span><span class="n">cs</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">logger</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="s2">&quot;Restored runhistory from </span><span class="si">%s</span><span class="s2">&quot;</span><span class="p">,</span> <span class="n">rh_path</span><span class="p">)</span>
-        <span class="n">stats</span> <span class="o">=</span> <span class="n">Stats</span><span class="p">(</span><span class="n">tmp_scen</span><span class="p">)</span>  <span class="c1"># Need to inject actual scenario later for output_dir!</span>
+        <span class="n">stats</span> <span class="o">=</span> <span class="n">Stats</span><span class="p">(</span><span class="n">scen</span><span class="p">)</span>
         <span class="n">stats</span><span class="o">.</span><span class="n">load</span><span class="p">(</span><span class="n">stats_path</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">logger</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="s2">&quot;Restored stats from </span><span class="si">%s</span><span class="s2">&quot;</span><span class="p">,</span> <span class="n">stats_path</span><span class="p">)</span>
         <span class="k">with</span> <span class="nb">open</span><span class="p">(</span><span class="n">traj_path_aclib</span><span class="p">,</span> <span class="s1">&#39;r&#39;</span><span class="p">)</span> <span class="k">as</span> <span class="n">traj_fn</span><span class="p">:</span>
@@ -405,13 +400,11 @@
             <span class="n">traj_list_old</span> <span class="o">=</span> <span class="n">traj_fn</span><span class="o">.</span><span class="n">readlines</span><span class="p">()</span>
         <span class="k">return</span> <span class="n">rh</span><span class="p">,</span> <span class="n">stats</span><span class="p">,</span> <span class="n">traj_list_aclib</span><span class="p">,</span> <span class="n">traj_list_old</span></div>
 
-<div class="viewcode-block" id="SMACCLI.restore_state_after_scen"><a class="viewcode-back" href="../../apidoc/smac.smac_cli.html#smac.smac_cli.SMACCLI.restore_state_after_scen">[docs]</a>    <span class="k">def</span> <span class="nf">restore_state_after_scen</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">scen</span><span class="p">,</span> <span class="n">stats</span><span class="p">,</span> <span class="n">traj_list_aclib</span><span class="p">,</span>
-                                 <span class="n">traj_list_old</span><span class="p">):</span>
-        <span class="sd">&quot;&quot;&quot;Finish processing files for state-restoration. The actual scenario</span>
-<span class="sd">        needs to be injected into stats, as well as the trajectory dealt with</span>
-<span class="sd">        (it is read in, but needs to be written to new output-folder after</span>
-<span class="sd">        scenario is constructed.&quot;&quot;&quot;</span>
-        <span class="n">stats</span><span class="o">.</span><span class="n">scenario</span> <span class="o">=</span> <span class="n">scen</span>  <span class="c1"># inject actual scen for output_dir</span>
+<div class="viewcode-block" id="SMACCLI.restore_state_after_output_dir"><a class="viewcode-back" href="../../apidoc/smac.smac_cli.html#smac.smac_cli.SMACCLI.restore_state_after_output_dir">[docs]</a>    <span class="k">def</span> <span class="nf">restore_state_after_output_dir</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">scen</span><span class="p">,</span> <span class="n">stats</span><span class="p">,</span> <span class="n">traj_list_aclib</span><span class="p">,</span>
+                                       <span class="n">traj_list_old</span><span class="p">):</span>
+        <span class="sd">&quot;&quot;&quot;Finish processing files for state-restoration. Trajectory</span>
+<span class="sd">        is read in, but needs to be written to new output-folder. Therefore, the</span>
+<span class="sd">        output-dir is created. This needs to be considered in the SMAC-facade.&quot;&quot;&quot;</span>
         <span class="c1"># write trajectory-list</span>
         <span class="n">traj_path_aclib</span> <span class="o">=</span> <span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">scen</span><span class="o">.</span><span class="n">output_dir</span><span class="p">,</span> <span class="s2">&quot;traj_aclib2.json&quot;</span><span class="p">)</span>
         <span class="n">traj_path_old</span> <span class="o">=</span> <span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">scen</span><span class="o">.</span><span class="n">output_dir</span><span class="p">,</span> <span class="s2">&quot;traj_old.csv&quot;</span><span class="p">)</span>
@@ -420,11 +413,12 @@
         <span class="k">with</span> <span class="nb">open</span><span class="p">(</span><span class="n">traj_path_old</span><span class="p">,</span> <span class="s1">&#39;w&#39;</span><span class="p">)</span> <span class="k">as</span> <span class="n">traj_fn</span><span class="p">:</span>
             <span class="n">traj_fn</span><span class="o">.</span><span class="n">writelines</span><span class="p">(</span><span class="n">traj_list_old</span><span class="p">)</span>
         <span class="c1"># read trajectory to retrieve incumbent</span>
+        <span class="c1"># TODO replace this with simple traj_path_aclib?</span>
         <span class="n">trajectory</span> <span class="o">=</span> <span class="n">TrajLogger</span><span class="o">.</span><span class="n">read_traj_aclib_format</span><span class="p">(</span><span class="n">fn</span><span class="o">=</span><span class="n">traj_path_aclib</span><span class="p">,</span> <span class="n">cs</span><span class="o">=</span><span class="n">scen</span><span class="o">.</span><span class="n">cs</span><span class="p">)</span>
         <span class="n">incumbent</span> <span class="o">=</span> <span class="n">trajectory</span><span class="p">[</span><span class="o">-</span><span class="mi">1</span><span class="p">][</span><span class="s2">&quot;incumbent&quot;</span><span class="p">]</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">logger</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="s2">&quot;Restored incumbent </span><span class="si">%s</span><span class="s2"> from </span><span class="si">%s</span><span class="s2">&quot;</span><span class="p">,</span> <span class="n">incumbent</span><span class="p">,</span>
                           <span class="n">traj_path_aclib</span><span class="p">)</span>
-        <span class="k">return</span> <span class="n">stats</span><span class="p">,</span> <span class="n">incumbent</span></div></div>
+        <span class="k">return</span> <span class="n">incumbent</span></div></div>
 </pre></div>
 
            </div>
